--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ html{
     margin-top: 46px;
     padding-top: 50%;
     box-sizing: border-box;    
-    background: url('/assets/img/slider/bigbang1.jpg') top center / contain no-repeat;
+    background: url('../img/slider/bigbang1.jpg') top center / contain no-repeat;
 }
 
 #slider .text-content{
@@ -224,6 +224,7 @@ html{
 #slider .text-body{
     font-size: 16px;
     margin-top: 25px;
+    text-shadow: 0 0 1px #000;
 }
 
 #content .content-section{
